[tool.poetry]
name = "cwa"
version = "0.0.1"
description = ""
authors = ["Mitra-Electronics <ishanmitra020@gmail.com>"]
readme = "README.md"
packages = [{include = "cwa", from = "src"}]

[tool.poetry.scripts]
cwa = "cwa.main:app"

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.9.0"}
questionary = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
